--- a/NetBeansProjects/caixa/nbproject/project.properties
+++ b/NetBeansProjects/caixa/nbproject/project.properties
@@ -37,6 +37,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.all-themes-1.0.10.jar=../../Documentos/bibliotecas/all-themes-1.0.10.jar
 file.reference.bootstrap-1.0.10.jar-1=C:\\Users\\Desenvolvedor\\Documents\\bibliotecas\\bootstrap-1.0.10.jar
 file.reference.casablanca-1.0.10.jar=C:\\Users\\Desenvolvedor\\Documents\\bibliotecas\\casablanca-1.0.10.jar
 file.reference.commons-beanutils-1.9.2.jar=../../../sistemas/Downloads/commons-beanutils-1.9.2.jar
@@ -85,7 +86,8 @@ javac.classpath=\
     ${file.reference.itext-4.2.1.jar}:\
     ${file.reference.bootstrap-1.0.10.jar-1}:\
     ${file.reference.casablanca-1.0.10.jar}:\
-    ${file.reference.start-1.0.10.jar}
+    ${file.reference.start-1.0.10.jar}:\
+    ${file.reference.all-themes-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
