--- a/NetBeansProjects/caixa/web/WEB-INF/web.xml
+++ b/NetBeansProjects/caixa/web/WEB-INF/web.xml
@@ -50,7 +50,7 @@
         
          <context-param>  
             <param-name>primefaces.THEME</param-name>  
-            <param-value>bootstrap</param-value>  
+            <param-value>start</param-value>  
         </context-param>
                 
                 <filter>
