--- a/NetBeansProjects/marcacao/web/WEB-INF/web.xml
+++ b/NetBeansProjects/marcacao/web/WEB-INF/web.xml
@@ -17,8 +17,8 @@
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
     <resource-ref>
-		<description>divanfDS</description>
-		<res-ref-name>jboss/jdbc/divanfDS</res-ref-name>
+		<description>marcacaoDS</description>
+		<res-ref-name>jboss/jdbc/marcacaoDS</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
