--- a/NetBeansProjects/caixa/nb_jr_remoting.cfg
+++ b/NetBeansProjects/caixa/nb_jr_remoting.cfg
@@ -5,5 +5,5 @@
   <entry key="com.zeroturnaround.jrebel.remoting.DeleteUnindexedFiles">true</entry>
   <entry key="com.zeroturnaround.jrebel.netbeans.ModuleVersion">4</entry>
   <entry key="com.zeroturnaround.jrebel.remoting.ModuleRemoteServerPreviousEnabledSelection">instance</entry>
-  <entry key="com.zeroturnaround.jrebel.remoting.ModuleRemoteServerSelection">instance</entry>
+  <entry key="com.zeroturnaround.jrebel.remoting.ModuleRemoteServerSelection">off</entry>
 </properties>
