--- a/NetBeansProjects/caixa/nbproject/project.properties
+++ b/NetBeansProjects/caixa/nbproject/project.properties
@@ -48,6 +48,7 @@ file.reference.groovy-all-2.4.10.jar=../../../sistemas/Downloads/groovy-all-2.4.
 file.reference.itextpdf-5.5.11.jar=../../../sistemas/Downloads/itextpdf-5.5.11.jar
 file.reference.jasperreports-6.4.0.jar=../../../sistemas/Documents/jasperreports-6.4.0.jar
 file.reference.poi-3.15.jar=../../../sistemas/Documents/poi-3.15.jar
+file.reference.primefaces-6.0.jar=../../Documentos/bibliotecas/primefaces-6.0.jar
 file.reference.spring-security-aspects-3.2.3.RELEASE.jar=../../../Junior/Downloads/spring-security-3.2.3.RELEASE-dist/spring-security-3.2.3.RELEASE/dist/spring-security-aspects-3.2.3.RELEASE.jar
 file.reference.start-1.0.10.jar=C:\\Users\\Desenvolvedor\\Documents\\bibliotecas\\start-1.0.10.jar
 includes=**
@@ -59,7 +60,6 @@ j2ee.platform.classpath=${j2ee.server.home}/modules/system/layers/base/javax/sec
 j2ee.server.type=WildFly
 jar.compress=false
 javac.classpath=\
-    ${libs.primefaces.classpath}:\
     ${file.reference.spring-security-aspects-3.2.3.RELEASE.jar}:\
     ${libs.spring-framework300.classpath}:\
     ${file.reference.spring-security-acl-3.2.3.RELEASE.jar-1}:\
@@ -87,7 +87,8 @@ javac.classpath=\
     ${file.reference.bootstrap-1.0.10.jar-1}:\
     ${file.reference.casablanca-1.0.10.jar}:\
     ${file.reference.start-1.0.10.jar}:\
-    ${file.reference.all-themes-1.0.10.jar}
+    ${file.reference.all-themes-1.0.10.jar}:\
+    ${file.reference.primefaces-6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
